--- a/cmd/profefe/BUILD.bazel
+++ b/cmd/profefe/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
 container_image(
     name = "image-arm64",
-    base = "//:golang",
+    base = "@golang_distroless_arm64//image",
     entrypoint = ["/profefe"],
     files = [":profefe"],
     target_compatible_with = select({
@@ -14,7 +14,7 @@ container_image(
 
 container_image(
     name = "image-amd64",
-    base = "//:golang",
+    base = "@golang_distroless_amd64//image",
     entrypoint = ["/profefe"],
     files = [":profefe"],
     target_compatible_with = select({
